GAP-20 link fixed,text justified text and text divided into paragraphs

--- a/src/src/components/about/about.css
+++ b/src/src/components/about/about.css
@@ -2,3 +2,9 @@
     margin-top: 15px;
     margin-bottom: 15px;
 }
+a{
+    text-decoration: none;
+}
+p{
+    text-align: justify;
+}
